dc/s2n-quic-dc/src/snapshots/stream__reader__tests__max_data_send_failure_does_not_release_unbacked_window.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] DEBUG Reader dropping binding_id=1 status=Open final_size=None consumed_len=12 total_received_len=12 is_writing_complete=false is_reading_complete=false
0 [main] DEBUG Reader dropped before FIN received - sent STOP_SENDING binding_id=1
