dc/s2n-quic-dc/src/snapshots/stream__reader__tests__max_data_transmission_failure_surfaces_error.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] TRACE c#credit.release.bytes=524289
0 [main] TRACE c#credit.release.calls=1
0 [main] DEBUG event=on_received prev=Init next=Open location=dc/s2n-quic-dc/src/stream/reader.rs
0 [main] TRACE c#credit.acquire.fast_path=1
0 [main] TRACE c#credit.acquire.bytes=524289
0 [main] TRACE m#test.sojourn[transmission_error]=0
0 [main] DEBUG Reader dropping binding_id=1 status=Open final_size=None consumed_len=524289 total_received_len=524289 is_writing_complete=false is_reading_complete=false
0 [main] DEBUG Reader dropped before FIN received - sent STOP_SENDING binding_id=1
0 [main] TRACE c#credit.release.bytes=1048576
0 [main] TRACE c#credit.release.calls=1
