dc/s2n-quic-dc/src/snapshots/stream__reader__tests__maybe_send_max_data_re_polls_without_double_parking.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] DEBUG distributor created
0 [main] TRACE c#credit.release.bytes=524289
0 [main] TRACE c#credit.release.calls=1
0 [main] DEBUG event=on_received prev=Init next=Open location=dc/s2n-quic-dc/src/stream/reader.rs
0 [main] TRACE c#credit.acquire.parked[Medium]=1
0 [main] TRACE c#credit.acquire.bytes=524289
0 [main] TRACE c#rx.flow.max_data_not_sent[credit_parked]=1
0 [main] TRACE c#rx.flow.max_data_not_sent[granted_zero]=1
0 [main] TRACE c#credit.release.bytes=64
0 [main] TRACE c#credit.release.calls=1
0 [main] DEBUG Reader dropping binding_id=1 status=Open final_size=None consumed_len=524353 total_received_len=524353 is_writing_complete=false is_reading_complete=false
0 [main] DEBUG Sent QueueReset binding_id=1 error_code=4 reset_target=Control
0 [main] DEBUG Reader dropped before FIN received - sent STOP_SENDING binding_id=1
0 [main] TRACE c#credit.release.bytes=524223
0 [main] TRACE c#credit.release.calls=1
1 [main] DEBUG distributor dropping; closing pool
