dc/s2n-quic-dc/src/snapshots/stream__reader__tests__panic_drop_sends_abnormal_termination_reset.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0 [main] DEBUG Reader dropping binding_id=1 status=Init final_size=None consumed_len=0 total_received_len=0 is_writing_complete=false is_reading_complete=false
0 [main] DEBUG Sent QueueReset binding_id=1 error_code=3 reset_target=Both
0 [main] DEBUG Reader dropped during panic - sent QueueReset binding_id=1
0 [main] TRACE c#credit.release.bytes=1048576
0 [main] TRACE c#credit.release.calls=1
