dc/s2n-quic-dc/src/snapshots/stream__reader__tests__peer_liveness_buffers_preceding_data_before_reset.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] TRACE c#credit.release.bytes=12
0:00:00.000000000 [main] TRACE c#credit.release.calls=1
0:00:00.000000000 [main] DEBUG event=on_received prev=Init next=Open location=dc/s2n-quic-dc/src/stream/reader.rs
0:00:00.000000000 [main] DEBUG Stream reset by peer binding_id=1 error_code=1
0:00:00.000000000 [main] DEBUG event=on_reset prev=Open next=Reset location=dc/s2n-quic-dc/src/stream/reader.rs
0:00:00.000000000 [main] DEBUG Reader dropping binding_id=1 status=Reset final_size=None consumed_len=0 total_received_len=0 is_writing_complete=false is_reading_complete=false
0:00:00.000000000 [main] TRACE c#credit.release.bytes=1048564
0:00:00.000000000 [main] TRACE c#credit.release.calls=1
