dc/s2n-quic-dc/src/snapshots/stream__reader__tests__peer_liveness_does_not_update_flow_control.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] TRACE c#credit.release.bytes=4
0:00:00.000000000 [main] TRACE c#credit.release.calls=1
0:00:00.000000000 [main] DEBUG event=on_received prev=Init next=Open location=dc/s2n-quic-dc/src/stream/reader.rs
0:00:00.000000000 [main] DEBUG Reader dropping binding_id=1 status=Open final_size=None consumed_len=4 total_received_len=4 is_writing_complete=false is_reading_complete=false
0:00:00.000000000 [main] DEBUG Reader dropped before FIN received - sent STOP_SENDING binding_id=1
0:00:00.000000000 [main] TRACE c#credit.release.bytes=1048572
0:00:00.000000000 [main] TRACE c#credit.release.calls=1
