dc/s2n-quic-dc/src/snapshots/stream__reader__tests__peer_liveness_resolves_immediately_when_fin_already_in_reassembler.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] TRACE c#credit.release.bytes=3
0:00:00.000000000 [main] TRACE c#credit.release.calls=1
0:00:00.000000000 [main] DEBUG event=on_received prev=Init next=Open location=dc/s2n-quic-dc/src/stream/reader.rs
0:00:00.000000000 [main] DEBUG Reader complete - all data consumed binding_id=1 final_size=Some(3) consumed_len=3
0:00:00.000000000 [main] DEBUG event=on_complete prev=Open next=Complete location=dc/s2n-quic-dc/src/stream/reader.rs
0:00:00.000000000 [main] DEBUG Reader dropping binding_id=1 status=Complete final_size=Some(3) consumed_len=3 total_received_len=3 is_writing_complete=true is_reading_complete=true
0:00:00.000000000 [main] TRACE c#credit.release.bytes=1048573
0:00:00.000000000 [main] TRACE c#credit.release.calls=1
